[gd_scene load_steps=5 format=3 uid="uid://cskjvx83suloi"]

[ext_resource type="Script" path="res://src/landing_page.gd" id="1_v81ao"]
[ext_resource type="Texture2D" uid="uid://dcladelg0ljtd" path="res://assets/intro_button.png" id="2_gax3n"]
[ext_resource type="Texture2D" uid="uid://b606g0m5bvqjd" path="res://assets/forest_bg.png" id="3_3con3"]
[ext_resource type="Texture2D" uid="uid://c5ke1i10e0oq8" path="res://assets/start_button.png" id="4_0m1dh"]

[node name="LandingPage" type="CanvasLayer"]
script = ExtResource("1_v81ao")

[node name="IntroButton" type="Sprite2D" parent="."]
position = Vector2(514, 523)
scale = Vector2(2.5, 1.25)
texture = ExtResource("2_gax3n")

[node name="NextTextButton" type="Button" parent="IntroButton"]
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_left = -210.0
offset_top = -340.0
offset_right = 210.0
offset_bottom = -140.0
grow_vertical = 2
flat = true

[node name="Introduction" type="Label" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -11.5
offset_right = 20.0
offset_bottom = 11.5
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 10
theme_override_font_sizes/font_size = 48
text = "Lo! A village, proud yet lone,
Its fate now rests on lands unknown."

[node name="Background" type="Sprite2D" parent="."]
z_index = -3
position = Vector2(700, 400)
texture = ExtResource("3_3con3")

[node name="StartButtonImg" type="Sprite2D" parent="."]
visible = false
position = Vector2(518.5, 904)
scale = Vector2(1.32708, 1)
texture = ExtResource("4_0m1dh")

[node name="StartButton" type="Button" parent="StartButtonImg"]
top_level = true
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -262.5
offset_top = -245.0
offset_right = 268.5
offset_bottom = -39.0
grow_horizontal = 2
grow_vertical = 0
theme_override_constants/outline_size = 10
theme_override_font_sizes/font_size = 48
disabled = true
text = "Nothing can go wrong"
flat = true

[connection signal="button_up" from="IntroButton/NextTextButton" to="." method="_on_next_text_button_up"]
[connection signal="button_up" from="StartButtonImg/StartButton" to="." method="_on_start_button_button_up"]
